[package]
name = "re_render_crabgrab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crabgrab = { version = "0.1.1", features = ["wgpu", "bitmap"] }
re_renderer = { path = "/Users/yuta/ghq/github.com/rerun-io/rerun/crates/re_renderer" }
anyhow = "1.0.82"
zip = "1.1.1"
web-sys = "0.3.69"
wasm-bindgen-futures = "0.4.42"
itertools = "0.12.1"
image = "0.24.9"
winit = { version = "0.29.15", features = [
    "rwh_06",
    "x11",
    "wayland",
    "wayland-dlopen",
] }
wgpu = "0.19.4"
glam = "0.22.0"
web-time = "0.2.0"
macaw = "0.18"
pollster = "0.3"
tokio = { version = "1.37", features = ["rt", "macros", "rt-multi-thread", "time"] }
once_cell = "1.19.0"
puffin = "0.19.0"
puffin_http = "0.16.0"
metal = "0.27.0"
